@@ -24,10 +24,14 @@ export(addTileFolder)
 export(clip2sfc)
 export(colorOptions)
 export(garnishMap)
+export(hideLogo)
 export(paintRules)
 export(removeHomeButton)
+export(removeLogo)
 export(removeMouseCoordinates)
+export(showLogo)
 export(updateLayersControl)
+export(updateLogo)
 importFrom(base64enc,base64encode)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,colors)
@@ -35,6 +39,7 @@ importFrom(grDevices,rgb)
 importFrom(leaflet,addRasterImage)
 importFrom(leaflet,colorNumeric)
 importFrom(leaflet,expandLimits)
+importFrom(leaflet,filterNULL)
 importFrom(leaflet,getMapData)
 importFrom(leaflet,invokeMethod)
 importFrom(methods,formalArgs)
