@@ -1,3 +1,15 @@
+logodeps <- function() {
+  list(
+    htmltools::htmlDependency(
+      "logodeps",
+      version = "1.0.0",
+      system.file("htmlwidgets/lib/", package = "leafem"),
+      script = "logo.js",
+    )
+  )
+}
+
+
 ### addLogo ##################################################################
 ##############################################################################
 #' add a local or remote image (png, jpg, gif, bmp, ...) to a leaflet map
@@ -9,8 +21,8 @@
 #' @param map a mapview or leaflet object.
 #' @param img the image to be added to the map.
 #' @param alpha opacity of the added image.
-#' @param src character specifying the source location ("local" for images from
-#' the disk, "remote" for web image sources).
+#' @param src DEPRECATED. The function now automatically determines if `img` is
+#'   a local or remote image using `file.exists(img)`.
 #' @param url an optional URL to be opened when clicking on the image
 #' (e.g. company's homepage).
 #' @param position one of "topleft", "topright", "bottomleft", "bottomright".
@@ -18,6 +30,8 @@
 #' @param offset.y the offset in y direction from the chosen position (in pixels).
 #' @param width width of the rendered image in pixels.
 #' @param height height of the rendered image in pixels.
+#' @param layerId an id for the logo div.
+#' @param class optional class
 #'
 #' @examples
 #' library(leaflet)
@@ -50,6 +64,7 @@
 #' @export addLogo
 #' @name addLogo
 #' @rdname addLogo
+#' @importFrom leaflet filterNULL
 #' @aliases addLogo
 
 ## courtesy of
@@ -59,177 +74,110 @@
 addLogo <- function(map,
                     img,
                     alpha = 1,
-                    src = c("remote", "local"),
-                    url,
+                    src = NULL,
+                    url = NULL,
                     position = c("topleft", "topright",
                                  "bottomleft", "bottomright"),
                     offset.x = 50,
                     offset.y = 13,
                     width = 60,
-                    height = 60) {
-  # check for duplication?
-  #  not sure of a good way to do this
+                    height = 60,
+                    class = NULL,
+                    layerId = NULL) {
+
   if (inherits(map, "mapview")) map <- mapview2leaflet(map)
   stopifnot(inherits(map, c("leaflet", "leaflet_proxy")))
 
-  if (!missing(url)) url <- paste0('"', url, '"')
+  if (!is.null(src)) {
+    warning("'src' parameter is deprecated in 'addLogo' and will be ignored.\n",
+            "The function now automatically determines if 'img' is a local or remote image using 'file.exists(img)'.")
+  }
+  position <- match.arg(position)
+  map$dependencies <- c(map$dependencies, logodeps())
 
-  position <- position[1]
-  src <- src[1]
+  img <- base64local(img)
 
+  options <- filterNULL(list(
+    alpha = alpha,
+    url = url,
+    position = position,
+    offsetX = offset.x,
+    offsetY = offset.y,
+    width = width,
+    height = height,
+    class = class
+  ))
 
-  div_topleft <- paste0("newDiv.css({
-                        'position': 'absolute',
-                        'top': '", offset.y, "px',
-                        'left': '", offset.x, "px',
-                        'background-color': 'transparent',
-                        'border': '0px solid black',
-                        'width': '", width, "px',
-                        'height': '", height, "px',
-});")
-
-  div_topright <- paste0("newDiv.css({
-                         'position': 'absolute',
-                         'top': '", offset.y, "px',
-                         'right': '", offset.x, "px',
-                         'background-color': 'transparent',
-                         'border': '0px solid black',
-                         'width': '", width, "px',
-                         'height': '", height, "px',
-                         });")
-
-  div_bottomleft <- paste0("newDiv.css({
-                           'position': 'absolute',
-                           'bottom': '", offset.y, "px',
-                           'left': '", offset.x, "px',
-                           'background-color': 'transparent',
-                           'border': '0px solid black',
-                           'width': '", width, "px',
-                           'height': '", height, "px',
-                           });")
-
-  div_bottomright <- paste0("newDiv.css({
-                            'position': 'absolute',
-                            'bottom': '", offset.y, "px',
-                            'right': '", offset.x, "px',
-                            'background-color': 'transparent',
-                            'border': '0px solid black',
-                            'width': '", width, "px',
-                            'height': '", height, "px',
-                            });")
-
-  div <- switch(position,
-                topleft = div_topleft,
-                topright = div_topright,
-                bottomleft = div_bottomleft,
-                bottomright = div_bottomright)
-
-  div_funk <- paste0("function(el, x, data) {
-                     // we need a new div element because we have to handle
-                     // the mouseover output seperately
-                     // debugger;
-                     function addElement () {
-                     // generate new div Element
-                     var newDiv = $(document.createElement('div'));
-                     // append at end of leaflet htmlwidget container
-                     $(el).append(newDiv);
-                     //provide ID and style
-                     newDiv.addClass('logo');\n",
-                     div,
-                     "return newDiv;
-                     }")
-
-  div_add <- paste0("// check for already existing logo class to not duplicate
-                    var logo = $(el).find('.logo');
-                    if(!logo.length) {
-                    logo = addElement();")
-
-  # if (missing(url)) {
-  #   div_html <- paste0("logo.html('<img src=", img,
-  #                      ", width=", width, "height=", height, "></a>');
-  #                      var map = HTMLWidgets.find('#' + el.id).getMap();
-  #                      };
-  #                      }")
-  # } else {
-  #   div_html <- paste0("logo.html('<a href=", url, "><img src=", img,
-  #                      ", width=", width, "height=", height, "></a>');
-  #                      var map = HTMLWidgets.find('#' + el.id).getMap();
-  #                      };
-  #                      }")
-  # }
-
-  div_html <- switch(src,
-                     remote = remoteImage(img, alpha, url, width, height),
-                     local = localImage(img, alpha, url, width, height))
-
-  render_stuff <- paste0(div_funk, div_add, div_html)
-
-  map <- htmlwidgets::onRender(map, render_stuff)
-
-  return(map)
-}
-
-
-### local image
-localImage <- function(img, alpha, url, width, height) {
-  nm <- basename(img)
-  drs <- file.path(tempdir(), "graphs")
-  if (!dir.exists(drs)) dir.create(drs)
-  fls <- file.path(drs, nm)
-  invisible(file.copy(img, file.path(drs, nm)))
-  rel_path <- paste0('"', file.path("..", basename(drs), basename(img)), '"')
-
-  style <- paste0(', style="opacity:',
-                  alpha,
-                  ';filter:alpha(opacity=',
-                  alpha * 100, ');"')
-
-  if (missing(url)) {
-    div_html <- paste0("logo.html('<img src=", rel_path,
-                       ", width=", width, ", height=", height, style,
-                       ", ></a>');
-                       var map = HTMLWidgets.find('#' + el.id).getMap();
-  };
-}")
-  } else {
-    div_html <- paste0("logo.html('<a href=", url, "><img src=", rel_path,
-                       ", width=", width, ", height=", height, style,
-                       "></a>');
-                       var map = HTMLWidgets.find('#' + el.id).getMap();
-};
-}")
+  ## Make sure layerId is set and unique
+  if (is.null(layerId)) {
+    layerId <- as.character(as.numeric(Sys.time()))
   }
 
-  return(div_html)
+  leaflet::invokeMethod(
+    map,
+    NULL,
+    "addLogo",
+    img,
+    layerId,
+    options)
 }
 
-### remote image
-remoteImage <- function(img, alpha, url, width, height) {
+#' updateLogo
+#' @inheritParams addLogo
+#' @rdname addLogo
+#' @export
+updateLogo <- function(map, img, layerId) {
+  img <- base64local(img)
+  leaflet::invokeMethod(
+    map,
+    NULL,
+    "updateLogo",
+    img,
+    layerId)
+}
 
-  img <- paste0('"', img, '"')
+#' removeLogo
+#' @inheritParams addLogo
+#' @rdname addLogo
+#' @export
+removeLogo <- function(map, layerId) {
+  leaflet::invokeMethod(
+    map,
+    NULL,
+    "removeLogo",
+    layerId)
+}
 
-  style <- paste0(', style="opacity:',
-                  alpha,
-                  ';filter:alpha(opacity=',
-                  alpha * 100, ');"')
+#' hideLogo
+#' @inheritParams addLogo
+#' @rdname addLogo
+#' @export
+hideLogo <- function(map, layerId) {
+  leaflet::invokeMethod(
+    map,
+    NULL,
+    "hideLogo",
+    layerId)
+}
 
-  if (missing(url)) {
-    div_html <- paste0("logo.html('<img src=", img,
-                       ", width=", width, ", height=", height, style,
-                       "></a>');
-                       var map = HTMLWidgets.find('#' + el.id).getMap();
-                       };
-                       }")
-  } else {
-    div_html <- paste0("logo.html('<a href=", url, "><img src=", img,
-                       ", width=", width, ", height=", height, style,
-                       "></a>');
-                       var map = HTMLWidgets.find('#' + el.id).getMap();
-                       };
-                       }")
+#' showLogo
+#' @inheritParams addLogo
+#' @rdname addLogo
+#' @export
+showLogo <- function(map, layerId) {
+  leaflet::invokeMethod(
+    map,
+    NULL,
+    "showLogo",
+    layerId)
+}
+
+base64local <- function(img) {
+  if (file.exists(img)) {
+    fileext <- tools::file_ext(img)
+    if (fileext == "svg") fileext <- paste0(fileext, "+xml")
+    img <- base64enc::dataURI(file = img, mime = paste0("image/", fileext))
   }
-
-  return(div_html)
+  img
 }
 
-##############################################################################
